--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -29,16 +28,17 @@
             android:label="@string/Edit"
             android:launchMode="singleTop" />
         <activity android:name=".Activity.AboutActivity" />
+
+        <activity android:name=".Activity.SettingActivity" />
         <activity
-            android:name=".Activity.SettingsActivity"
-            android:label="@string/title_activity_settings" />
+            android:name=".Activity.MarkdownActivity"
+            android:label="@string/preset">
+        </activity>
 
         <service
             android:name=".Service.ReminderService"
             android:enabled="true"
-            android:exported="true"></service>
-
-        <activity android:name=".Activity.SettingActivity"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
