--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="lee.todo">
 
     <application
-        android:name="org.litepal.LitePalApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activity.EditActivity"
+            android:name=".Activity.AddEditActivity"
             android:label="@string/Edit"
             android:launchMode="singleTop" />
         <activity android:name=".Activity.BaseActivity" />
