--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,9 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
 
-    compile 'org.litepal.android:core:1.5.1'
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'com.wdullaer:materialdatetimepicker:3.2.2'
     compile 'us.feras.mdv:markdownview:1.1.0'
 
