--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="lee.todo">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+
     <application
-        android:name=".MyApplication"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -27,7 +31,9 @@
             android:name=".Activity.UpdateActivity"
             android:label="@string/Edit"
             android:launchMode="singleTop" />
-        <activity android:name=".Activity.AboutActivity" />
+        <activity
+            android:name=".Activity.AboutActivity"
+            android:label="@string/About"/>
 
         <activity android:name=".Activity.SettingActivity" />
         <activity
